--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "firebase": "firebase emulators:start"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
+    "pinia": "^2.3.0",
+    "vee-validate": "^4.14.7",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
