added auth store, login with google functionality

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,6 +27,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "firebase.config.ts"
+    "firebase.config.ts",
+    "src/utils/check-auth.ts"
   ]
 }
