--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "firebase emulators:start"
   },
   "dependencies": {
+    "@vueuse/core": "^11.1.0",
     "firebase": "^11.1.0",
     "pinia": "^2.3.0",
     "vee-validate": "^4.14.7",
